app/prometheus/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmax-monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.tmaxos.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tmax-prometheus-service
            port:
              number: 9090
  - host: grafana.tmaxos.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tmax-grafana-service
            port:
              number: 3000
